# tool

./: .gitignore
ffmpeg-gui/: ffmpeg-gui  ffmpeg-gui.desktop
inofd/: Cargo.toml  README.md
inofd/src/: main.rs
qbtrm/: qbtrm  qbtrm.desktop
rlink/: Cargo.toml  rlink.toml
rlink/src/: main.rs
smr-viewer/: Cargo.toml
smr-viewer/src/: main.rs
startgame/: README.md  startgame  startgame.desktop
tg-bot/: Cargo.toml
tg-bot/src/: main.rs
