[package]
name = "rlink"
version = "0.1.0"
edition = "2021"
authors = ["Ling"]
description = "A high-performance, idempotent symlink aggregator."

[profile.release]
lto = "thin"      # 开启 LTO 减小体积并提升性能
codegen-units = 1 # 进一步优化二进制
strip = true      # 移除调试符号

[dependencies]
anyhow = "1.0"
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.4", features = ["derive"] }
globset = "0.4"
jwalk = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
filetime = "0.2"
dialoguer = "0.11"
