[package]
name = "tg-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
chrono-tz = "0.9"
uuid = { version = "1.0", features = ["v4"] }
tokio-retry = "0.3"
pretty_env_logger = "0.5"
log = "0.4"
